--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -6,18 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from gym_model import Gym\n",
-    "from mesa.experimental import JupyterViz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gym = Gym(1)\n",
-    "gym.step()"
+    "from gym_model import Gym"
    ]
   },
   {
@@ -26,9 +15,53 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agent 3 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 2 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "----------\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 2 @ (0, 1) (SEARCHING)\n",
+      "Agent 3 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "----------\n",
+      "Agent 2 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 3 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "----------\n",
+      "Agent 3 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 2 @ (0, 1) (SEARCHING)\n",
+      "----------\n",
+      "Agent 2 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 3 @ (0, 0) (SEARCHING)\n",
+      "----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "gym = Gym(4)\n",
+    "for _ in range(5):\n",
+    "    gym.step()\n",
+    "    print(\"-\"*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eebe3dd0f00d4599928c84dac3899d82",
+       "model_id": "4fcdc9233977434d9d491a4ed036b547",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,24 +79,354 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "free space from (0, 0): [(0, 1)]\n",
-      "free space from (0, 1): [(0, 0), (0, 2)]\n",
-      "free space from (0, 2): [(0, 1), (0, 3)]\n",
-      "free space from (0, 3): [(0, 2)]\n",
-      "free space from (0, 2): [(0, 1), (0, 3)]\n"
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 0) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 2) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 1) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 0 @ (0, 2) (SEARCHING)\n",
+      "Agent 1 @ (0, 0) (SEARCHING)\n",
+      "Agent 0 @ (0, 3) (SEARCHING)\n",
+      "Agent 1 @ (0, 1) (SEARCHING)\n"
      ]
     }
    ],
    "source": [
+    "from mesa.experimental import JupyterViz\n",
+    "from gym_model import Gym\n",
+    "\n",
+    "model_params = {\n",
+    "    \"num_trainees\": {\n",
+    "        \"type\": \"SliderInt\",\n",
+    "        \"value\": 2,\n",
+    "        \"label\": \"Number of agents:\",\n",
+    "        \"min\": 1,\n",
+    "        \"max\": 50,\n",
+    "        \"step\": 1,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "\n",
+    "from gym_agent import GymRat\n",
+    "\n",
     "page = JupyterViz(\n",
     "    Gym,\n",
-    "    model_params={\"num_trainees\": 1},\n",
+    "    model_params,\n",
     "    measures=[],\n",
     "    name=\"Test gym\",\n",
-    "    agent_portrayal=lambda agent: agent.portrayal\n",
+    "    agent_portrayal=lambda agent: agent.portrayal,\n",
+    "    space_drawer=\"default\",\n",
+    "    # space_drawer=GymDrawer,\n",
     ")\n",
     "\n",
     "page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<State.SEARCHING: 1>, <State.WORKING_OUT: 2>, <State.RESTING: 3>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gym_agent\n",
+    "\n",
+    "print(list(gym_agent.State))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import solara\n",
+    "from matplotlib.figure import Figure\n",
+    "import numpy as np\n",
+    "\n",
+    "@solara.component\n",
+    "def GymDrawer(model: Gym, agent_portrayal):\n",
+    "    print(\"GymDrawer called\")\n",
+    "    space_fig = Figure()\n",
+    "    space_ax = space_fig.subplots()\n",
+    "    agents = model.agent_layer\n",
+    "    _draw_grid(agents, space_ax, agent_portrayal)\n",
+    "\n",
+    "    equipment_x = []; equipment_y = []\n",
+    "    for (row, col), val in np.ndenumerate(model.equipment_layer):\n",
+    "        if val is not None:\n",
+    "            equipment_x.append(row)\n",
+    "            equipment_y.append(col)\n",
+    "    space_ax.scatter(equipment_x, equipment_y, color=\"black\", s=50, marker=\"2\")\n",
+    "\n",
+    "    # space_ax.set_axis_off()\n",
+    "    space_ax.set_xlim(0, 10)\n",
+    "    space_ax.set_ylim(0, 10)\n",
+    "    solara.FigureMatplotlib(space_fig, format=\"png\", dependencies=None)\n",
+    "\n",
+    "\n",
+    "def _draw_grid(space, space_ax, agent_portrayal):\n",
+    "    def portray(g):\n",
+    "        x = []\n",
+    "        y = []\n",
+    "        s = []  # size\n",
+    "        c = []  # color\n",
+    "        for i in range(g.width):\n",
+    "            for j in range(g.height):\n",
+    "                content = g._grid[i][j]\n",
+    "                if not content:\n",
+    "                    continue\n",
+    "                if not hasattr(content, \"__iter__\"):\n",
+    "                    # Is a single grid\n",
+    "                    content = [content]\n",
+    "                for agent in content:\n",
+    "                    data = agent_portrayal(agent)\n",
+    "                    x.append(i)\n",
+    "                    y.append(j)\n",
+    "                    if \"size\" in data:\n",
+    "                        s.append(data[\"size\"])\n",
+    "                    if \"color\" in data:\n",
+    "                        c.append(data[\"color\"])\n",
+    "        out = {\"x\": x, \"y\": y}\n",
+    "        if len(s) > 0:\n",
+    "            out[\"s\"] = s\n",
+    "        if len(c) > 0:\n",
+    "            out[\"c\"] = c\n",
+    "        print(\"portray:\", out)\n",
+    "        return out\n",
+    "\n",
+    "    space_ax.scatter(**portray(space))\n",
+    "\n"
    ]
   }
  ],
