random layout generation (very buggy)

--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,27 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0123ee5edd92446d8f8c74dd68db3826",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "Cannot show widget. You probably want to rerun the code cell above (<i>Click in the code cell, and press Shift+Enter <kbd>⇧</kbd>+<kbd>↩</kbd></i>)."
-      ],
-      "text/plain": [
-       "Cannot show ipywidgets in text"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_params = {\n",
     "    \"num_trainees\": {\n",
@@ -44,6 +26,14 @@
     "        \"min\": 1,\n",
     "        \"max\": 50,\n",
     "        \"step\": 1,\n",
+    "    },\n",
+    "    \"machine_density\": {\n",
+    "        \"type\": \"SliderFloat\",\n",
+    "        \"value\": 0.5,\n",
+    "        \"label\": \"Density of gym equipment:\",\n",
+    "        \"min\": 0,\n",
+    "        \"max\": 1,\n",
+    "        \"step\": 0.05,\n",
     "    },\n",
     "}\n",
     "\n",
