--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9165633a38f04499b1205d70987cac94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "Cannot show widget. You probably want to rerun the code cell above (<i>Click in the code cell, and press Shift+Enter <kbd>⇧</kbd>+<kbd>↩</kbd></i>)."
+      ],
+      "text/plain": [
+       "Cannot show ipywidgets in text"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "model_params = {\n",
     "    \"num_trainees\": {\n",
     "        \"type\": \"SliderInt\",\n",
-    "        \"value\": 1,\n",
+    "        \"value\": 10,\n",
     "        \"label\": \"Number of agents:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 50,\n",
@@ -29,9 +47,9 @@
     "    },\n",
     "    \"machine_density\": {\n",
     "        \"type\": \"SliderFloat\",\n",
-    "        \"value\": 0.5,\n",
+    "        \"value\": 0.25,\n",
     "        \"label\": \"Density of gym equipment:\",\n",
-    "        \"min\": 0,\n",
+    "        \"min\": 0.05,\n",
     "        \"max\": 1,\n",
     "        \"step\": 0.05,\n",
     "    },\n",
@@ -40,7 +58,7 @@
     "page = JupyterVizGym(\n",
     "    gym_model.Gym,\n",
     "    model_params,\n",
-    "    measures=[],\n",
+    "    measures=[\"Searching\"],\n",
     "    name=\"Test gym\",\n",
     "    agent_portrayal=lambda agent: agent.portrayal,\n",
     "    # space_drawer=\"default\",\n",
