--- a/report1/report.tex
+++ b/report1/report.tex
@@ -55,6 +55,8 @@
 
 \begin{abstract}
 TODO
+
+\textbf{NOTE TO REVIEWERS:} TODOs will be replaced in the final version of the report.
 \end{abstract}
 
 \dates{\textbf{\today}}
@@ -81,15 +83,15 @@ Through simulating gym-goer behavior, we aimed to identify the most effective ar
 Our goal is to offer practical insights for gym owners, managers, and designers seeking to optimize their facility layout for the benefit of their clients and business success.
 We limit ourselves to the case of muscle hypertrophy training with resistance exercises.
 
-\subsection*{Strength training}
+\subsection*{Hypertrophy training}
 A typical workout routine splits the body into several muscle groups, cycling through them on a per-workout basis. This rotation can be done on a weekly schedule, or the workouts can be weekday-independent for greater flexibility. Popular splits include:
 \begin{itemize}
 	\item \textbf{Push-pull-legs} (PPL) - Push muscles are those involved in pushing movements,
 	such as the chest, frontal deltoids (shoulders), and triceps. Pull muscles are those involved in pulling movements, such as the back musculature, rear deltoids, and biceps. Legs are the lower body muscles, such as the quadriceps, hamstrings, and calves.
-	\item \textbf{Upper-lower} - Upper body muscles are those above the waist, such as the chest, back, shoulders, and arms. Lower body muscles are those below the waist, such as the quadriceps, hamstrings, and calves.
-	\item \textbf{Full body} - All muscle groups are trained in every workout.
 \end{itemize}
 The exercises in a particular workout are then selected to stimulate each muscle in the chosen group, ideally cycling through them to avoid fatigue-induced form breakdown. Each individual exercise usually consists of 2-4 {\it sets} (where a movement is repeated some number of times), and short breaks in between. These breaks facilitate parallel use of gym equipment by (typically) up to two people, where one works out while the other rests. Note that this might involve time-consuming weight adjustment in between sets in case of differing strength levels, depending on the type of machine.
+
+
 
 
 \subsection*{Related work}
