--- a/model/playground.ipynb
+++ b/model/playground.ipynb
@@ -9,18 +9,45 @@
     "import importlib\n",
     "import gym_model\n",
     "importlib.reload(gym_model)\n",
-    "from visualisation import JupyterVizGym, GymDrawer"
+    "from visualisation import JupyterVizGym, GymDrawer\n",
+    "from optimization import LayoutTemplate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Component react.component(visualisation.JupyterVizGym) raised exception ValueError('Spawn location (1, 0) is occupied by TRICEPS_EXTENSION')\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\andre\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\reacton\\core.py\", line 1675, in _render\n",
+      "    root_element = el.component.f(*el.args, **el.kwargs)\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\andre\\fax\\mag\\cb\\gymulator\\model\\visualisation.py\", line 46, in JupyterVizGym\n",
+      "    model = solara.use_memo(\n",
+      "            ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\andre\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\reacton\\core.py\", line 851, in use_memo\n",
+      "    return rc.use_memo(f, dependencies, debug_name)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\andre\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\reacton\\core.py\", line 1216, in use_memo\n",
+      "    value = f()\n",
+      "            ^^^\n",
+      "  File \"c:\\Users\\andre\\fax\\mag\\cb\\gymulator\\model\\visualisation.py\", line 41, in make_model\n",
+      "    model = model_class(**model_parameters)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\andre\\fax\\mag\\cb\\gymulator\\model\\gym_model.py\", line 104, in __init__\n",
+      "    raise ValueError(f\"Spawn location {spawn_location} is occupied by {self.equipment_layer[spawn_location].name}\")\n",
+      "ValueError: Spawn location (1, 0) is occupied by TRICEPS_EXTENSION\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7964cfc2174b43bfbdc0bd41a766a054",
+       "model_id": "3ad5aa3e97f44ce79ec93ce0bfbb6cd5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,23 +63,28 @@
     }
    ],
    "source": [
+    "template = LayoutTemplate.circular(height=3, width=4)\n",
+    "import random\n",
+    "\n",
     "model_params = {\n",
-    "    \"num_trainees\": {\n",
+    "    \"interarrival_time\": {\n",
     "        \"type\": \"SliderInt\",\n",
     "        \"value\": 10,\n",
-    "        \"label\": \"Number of agents:\",\n",
+    "        \"label\": \"time between arrivals:\",\n",
     "        \"min\": 1,\n",
     "        \"max\": 50,\n",
     "        \"step\": 1,\n",
     "    },\n",
-    "    \"machine_density\": {\n",
-    "        \"type\": \"SliderFloat\",\n",
-    "        \"value\": 0.25,\n",
-    "        \"label\": \"Density of gym equipment:\",\n",
-    "        \"min\": 0.05,\n",
-    "        \"max\": 1,\n",
-    "        \"step\": 0.05,\n",
-    "    },\n",
+    "    # \"machine_density\": {\n",
+    "    #     \"type\": \"SliderFloat\",\n",
+    "    #     \"value\": 0.25,\n",
+    "    #     \"label\": \"Density of gym equipment:\",\n",
+    "    #     \"min\": 0.05,\n",
+    "    #     \"max\": 1,\n",
+    "    #     \"step\": 0.05,\n",
+    "    # },\n",
+    "    \"layout\": template.instantiate([random.choice(list(gym_model.Equipment)) for _ in range(len(template))]),\n",
+    "    \"spawn_location\": template.entrance,\n",
     "}\n",
     "\n",
     "page = JupyterVizGym(\n",
